--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <header>
-        <a href="#" class="logo">Foods</a>
+        <a href="#" class="logo">Foodies</a>
         <div class="bx bx-menu" id="menu-icon"></div>
         
         <ul class="navbar">
